--- a/client/package.json
+++ b/client/package.json
@@ -1,32 +1,23 @@
 {
-  "name": "client",
+  "name": "tailwind-project",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.1",
-    "node-sass-chokidar": "^1.5.0",
-    "react": "^17.0.2",
+    "axios": "^0.27.2",
+    "react": "^18.2.0",
     "react-clear-browser-cache": "^0.2.3",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.8",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "reactstrap": "^8.9.0",
-    "redux": "^4.1.2",
-    "sass": "^1.50.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.54.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o /src/ ",
-    "watch-css": "npm run build-css  && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o /src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
